--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li><a class="nav-link scrollto" href="#about">¿Sobre Nosotros?</a></li>
           <!-- <li><a class="nav-link scrollto" href="#menu">Menu</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#specials">Especialidades</a></li> -->
-          <li><a class="nav-link scrollto" href="#events">Eventos</a></li>
-          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
+          <li><a class="nav-link scrollto" href="#events">Promociones</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li> -->
           <li><a class="nav-link scrollto" href="#gallery">Nuestra Galeria</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> 
             <ul>
@@ -221,23 +221,21 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3><span></span> <strong><span>The Best of Bobby</span></strong></h3></br> 
+              <!-- <h3><span></span> <strong><span>The Best of Bobby</span></strong></h3></br> -->
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Con una trayectoria de 30 años en el mercado siempre dejando huella de generación en generación.
               </p>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+              <p>
+                Lo mejor de Puerto Barrios para la ciudad de Guatemala, con las mejores recetas y la sazón de la casa con una fusión de sabores caribeños como el coco, 
+                mariscos y carne premium siempre innovando con nuevos platillos para un gusto exigente. 
               </p>
               <ul>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bx bx-check-double"></i> Somos los mejores en parillas con nuestra especialidad en puyazo.</li>
+                <li><i class="bx bx-check-double"></i> Innovación en platillos en nuestro grill.</li>
+                <li><i class="bx bx-check-double"></i> Mariscos frescos y un toque de sabor místico en cada plato.</li>
               </ul>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
+                Nuestras parrilladas se destacan por su sabor y se ha participado para demostrar que somos los mejores a nivel nacional.
               </p>
             </div>
 
@@ -264,7 +262,7 @@
               <span>2014</span>
               <h4> Primera Participación</h4>
               <div class="pic"><img src="assets/img/premios/02014.jpeg" class="img-fluid" alt=""></div><br/>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <p>Iniciamos participando e innovando en nuestras parrilladas dando conocer nuestras habilidades.</p>
             </div>
           </div>
 
@@ -273,16 +271,16 @@
               <span>2017</span>
               <h4>Primer Lugar</h4>
               <div class="pic"><img src="assets/img/premios/12017.jpeg" class="img-fluid" alt=""></div><br/>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <p>Nos destacamos por ganar el primer lugar en asado de puyazo, a nivel nacional.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box">
-              <span>2019</span>
+              <span>2018</span>
               <h4>Tercer Lugar</h4>
               <div class="pic"><img src="assets/img/premios/32019.jpeg" class="img-fluid" alt=""></div><br/>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <p>Ganamos el tercer lugar en asado de puyazo, a nivel nacional, manteniendonos en el ranking de mejores puyazos.</p>
             </div>
           </div>
 
@@ -505,7 +503,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Organiza tus eventos en <span>The Best of Bobby</span></h2>
+          <h2>Organiza tus eventos, convivios o celebraciones en <br/>
+            <span>The Best of Bobby</span></h2>
         </div>
 
         <div class="events-slider swiper-container">
@@ -514,25 +513,27 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/happy-hour.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>HAPPY HOURS</h3>
                   <div class="price">
-                    <p><span>$189</span></p>
+                    <p><span>Desde 2 X Q. 25.00</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Jueves y viernes (3:00 a 19:00) en tragos preparados.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circle"></i> Mojitos</li>
+                    <li><i class="bi bi-check-circle"></i> Micheladas</li>
+                    <li><i class="bi bi-check-circle"></i> Piñas Coladas</li>
+                    <li><i class="bi bi-check-circle"></i> Desarmador</li>
+                    <li><i class="bi bi-check-circle"></i> Margaritas</li>
+                    <li><i class="bi bi-check-circle"></i> Bloody Mary</li>
+                    <li><i class="bi bi-check-circle"></i> Jamaica Frozen</li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
                   </p>
                 </div>
               </div>
@@ -541,25 +542,26 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/event-private.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/cerveza.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>HAPPY HOUR CERVECERO</h3>
                   <div class="price">
-                    <p><span>$290</span></p>
+                    <p><span>Nacionales a Q. 10.00</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Jueves y viernes (3:00 a 7:00)
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circle"></i> Gallo</li>
+                    <li><i class="bi bi-check-circle"></i> Modelo</li>
+                    <li><i class="bi bi-check-circle"></i> Cabro</li>
+                    <li><i class="bi bi-check-circle"></i> Dorada Ice</li>
+                    <li><i class="bi bi-check-circle"></i> Monte Carlo</li>
+                    <li><i class="bi bi-check-circle"></i> Corona</li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
                   </p>
                 </div>
               </div>
@@ -568,31 +570,119 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/event-custom.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/piconas.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
+                  <h3>NUESTRAS PICONAS</h3>
                   <div class="price">
-                    <p><span>$99</span></p>
+                    <p><span>4 X Q. 75.00</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    No podian faltar una de nuestras especialidades
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circle"></i> Gallo</li>
+                    <li><i class="bi bi-check-circle"></i> Modelo</li>
+                    <li><i class="bi bi-check-circle"></i> Cabro</li>
+                    <li><i class="bi bi-check-circle"></i> Dorada Ice</li>                    
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
                   </p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
 
-          </div>
+            <div class="swiper-slide">
+              <div class="row event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/mojarra.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>Mojarras 2x1</h3>
+                  <div class="price">
+                    <p><span>Desde Q. 80.00</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Martes y Miércoles (12:00 a 19:00)
+                  </p>
+                  <p class="fst-italic">
+                    Con 2 opciones de guarniciones:
+                  </p>
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i> Papas Fritas</li>
+                    <li><i class="bi bi-check-circle"></i> Yuca frita</li>
+                    <li><i class="bi bi-check-circle"></i> Arroz blanco</li>
+                    <li><i class="bi bi-check-circle"></i> Rice & Beans</li>
+                    <li><i class="bi bi-check-circle"></i> Ensalada</li>
+                  </ul>
+                  <p>
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="row event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/ladiesnight.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>LADIES NIGHT</h3>
+                  <div class="price">
+                    <p><span>Desde Q. 15.00</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Sabados (17:00 a 21:00)
+                  </p>                  
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i> Mojitos</li>
+                    <li><i class="bi bi-check-circle"></i> Micheladas</li>
+                    <li><i class="bi bi-check-circle"></i> Piñas Coladas</li>
+                    <li><i class="bi bi-check-circle"></i> Desarmador</li>
+                    <li><i class="bi bi-check-circle"></i> Margaritas</li>
+                    <li><i class="bi bi-check-circle"></i> Bloody Mary</li>
+                    <li><i class="bi bi-check-circle"></i> Jamaica Frozen</li>
+                  </ul>
+                  <p>
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="row event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/parrillada1.JPG" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>Parrilladas Familiares</h3>
+                  <div class="price">
+                    <p><span>Para 2, 4 y 6 personas</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Domingos entradas amitad de precio en eventos especiales 
+                  </p>
+                  <p class="fst-italic">
+                    Con de 2 y 4 opciones de guarniciones:
+                  </p>
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i> Papas Fritas</li>
+                    <li><i class="bi bi-check-circle"></i> Yuca frita</li>
+                    <li><i class="bi bi-check-circle"></i> Arroz blanco</li>
+                    <li><i class="bi bi-check-circle"></i> Rice & Beans</li>
+                    <li><i class="bi bi-check-circle"></i> Ensalada</li>
+                  </ul>
+                  <p>
+                    Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+          </div><br/><br/>
           <div class="swiper-pagination"></div>
         </div>
 
@@ -731,7 +821,7 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <!--<section id="chefs" class="chefs">
       <div class="container">
 
         <div class="section-title">
@@ -792,7 +882,7 @@
         </div>
 
       </div>
-    </section><!-- End Chefs Section -->
+    </section>--><!-- End Chefs Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
