--- a/index.html
+++ b/index.html
@@ -793,16 +793,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-6.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-6.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-7.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-7.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
