actualizaciones de ofertas y slogans

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="carousel-content">
                 <a href="index.html"><img src="assets/img/logo.jpeg" width="175px" style="margin-bottom:3em;" alt="" class="img-fluid"></a>
                 <h2 class="animate__animated animate__fadeInDown">Bienvendido a <span>The best of Bobby</span></h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.</p>
+                <p class="animate__animated animate__fadeInUp">Las mejores cosas de la vida no caen del cielo... Muchas estan en The Best Of Bobby.</p>
                 <div>
                   <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menu</a>
                   <a href="#contact" class="btn-book animate__animated animate__fadeInUp scrollto">Contactanos</a>
@@ -121,7 +121,7 @@
               <div class="carousel-content">
                 <a href="index.html"><img src="assets/img/logo.jpeg" width="175px" style="margin-bottom:3em;" alt="" class="img-fluid"></a>
                 <h2 class="animate__animated animate__fadeInDown">Un lugar para  <span>compartir</span></h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.</p>
+                <p class="animate__animated animate__fadeInUp">La vida no es para llevar, es para comer en The Best Of Bobby.</p>
                 <div>
                   <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menu</a>
                   <a href="#contact" class="btn-book animate__animated animate__fadeInUp scrollto">Contactanos</a>
@@ -137,7 +137,7 @@
               <div class="carousel-content">
                 <a href="index.html"><img src="assets/img/logo.jpeg" width="175px" style="margin-bottom:3em;" alt="" class="img-fluid"></a>
                 <h2 class="animate__animated animate__fadeInDown">Es un gusto <span>atenderte</span></h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.</p>
+                <p class="animate__animated animate__fadeInUp">Cocinar son trozos de amor comestibles, en The Best Of Bobby te consentimos.</p>
                 <div>
                   <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menu</a>
                   <a href="#contact" class="btn-book animate__animated animate__fadeInUp scrollto">Contactanos</a>
@@ -550,15 +550,12 @@
                     <p><span>Nacionales a Q. 10.00</span></p>
                   </div>
                   <p class="fst-italic">
-                    Jueves y viernes (3:00 a 7:00)
+                    Jueves y viernes (13:00 a 17:00)
                   </p>
                   <ul>
                     <li><i class="bi bi-check-circle"></i> Gallo</li>
-                    <li><i class="bi bi-check-circle"></i> Modelo</li>
-                    <li><i class="bi bi-check-circle"></i> Cabro</li>
-                    <li><i class="bi bi-check-circle"></i> Dorada Ice</li>
-                    <li><i class="bi bi-check-circle"></i> Monte Carlo</li>
-                    <li><i class="bi bi-check-circle"></i> Corona</li>
+                    <li><i class="bi bi-check-circle"></i> Modelo</li>                    
+                    <li><i class="bi bi-check-circle"></i> Dorada Ice</li>                    
                   </ul>
                   <p>
                     Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
@@ -582,9 +579,7 @@
                   </p>
                   <ul>
                     <li><i class="bi bi-check-circle"></i> Gallo</li>
-                    <li><i class="bi bi-check-circle"></i> Modelo</li>
-                    <li><i class="bi bi-check-circle"></i> Cabro</li>
-                    <li><i class="bi bi-check-circle"></i> Dorada Ice</li>                    
+                    <li><i class="bi bi-check-circle"></i> Modelo</li>                                        
                   </ul>
                   <p>
                     Siempre en The Best of Bobby con las mejores recetas y la sazón de la casa, con una fusión de sabores caribeños.
@@ -746,7 +741,7 @@
 
         <div class="section-title">
           <h2>Imagenes de <span>Nuestro Restaurante</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>Sonrie para la vida, no solo para la foto. Bienvenido a The Best Of Bobby.</p>
         </div>
 
         <div class="row no-gutters">
@@ -885,7 +880,7 @@
     </section>--><!-- End Chefs Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!--<section id="testimonials" class="testimonials">
       <div class="container position-relative">
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -905,9 +900,9 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -921,9 +916,9 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -937,9 +932,9 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -953,9 +948,9 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -969,14 +964,14 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
-          </div>
+          <!--</div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>--><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -1064,7 +1059,7 @@
   <footer id="footer">
     <div class="container">
       <h3>The Best of Bobby</h3>
-      <p>Nuestra especialidad son mariscos, pero también contamos con diferentes platillos a su elección.</p>
+      <p>Las mejores cosas de la vida no caen del cielo... Muchas estan en The Best Of Bobby.</p>
       <div class="social-links">
         <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
