page updates and menu

--- a/index.html
+++ b/index.html
@@ -756,16 +756,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-2.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-2.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-3.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-3.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -780,8 +780,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-5.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-5.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -804,8 +804,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-8.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-8.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -1020,18 +1020,18 @@
         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
+              <input type="text" name="name" class="form-control" id="name-contact" placeholder="Nombre" required>
             </div>
             <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
+              <input type="email" class="form-control" name="email" id="email-contact" placeholder="Correo" required>
             </div>
           </div><br/>
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Tema" required>
+              <input type="text" name="name" class="form-control" id="subject-contact" placeholder="Tema" required>
             </div>
             <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Teléfono" required>
+              <input type="email" class="form-control" name="email" id="phone-contact" placeholder="Teléfono" required>
             </div>
           </div>
 
@@ -1040,7 +1040,7 @@
           </div> -->
           
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
+            <textarea class="form-control" name="message" id="message-contact" rows="5" placeholder="Mensaje" required></textarea>
           </div>
           <div class="my-3">
             <div class="loading">Loading</div>
