--- a/menu.html
+++ b/menu.html
@@ -500,7 +500,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/piconasgallomodelo.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Piconas Model o Gallo (En lata)</a><span>Q. 25.00</span>
             </div>
@@ -510,7 +510,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/piconasgallomodelo.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Piconas Model o Gallo (En lata) X 4</a><span>Q. 75.00</span>
             </div>
@@ -520,7 +520,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/v8preparado.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Jugo V8 Preparado</a><span>Q. 12.00</span>
             </div>
@@ -530,7 +530,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/micheladamix.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Michelada Mix</a><span>Q. 10.00</span>
             </div>
@@ -540,7 +540,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-octavo">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/quetzalteca.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">QUETZALTECA Varios Sabores 2 x</a><span>Q. 25.00</span>
             </div>
@@ -550,7 +550,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/johnniewalkerred.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Johnnie Walker Botella Roja</a><span>Q. 375.00</span>
             </div>
@@ -560,7 +560,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/johnniewalkerred.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Johnnie Walker ½ Botella Roja</a><span>Q. 200.00</span>
             </div>
@@ -570,7 +570,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/johnniewalkerblack.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Johnnie Walker Botella Negra</a><span>Q. 675.00</span>
             </div>
@@ -580,7 +580,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/johnniewalkerblack.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Johnnie Walker ½ Botella Negra</a><span>Q. 350.00</span>
             </div>
@@ -590,7 +590,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/old parr.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Old Parr Botella</a><span>Q. 675.00</span>
             </div>
@@ -600,7 +600,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/old parr.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Old Parr ½  Botella</a><span>Q. 350.00</span>
             </div>
@@ -610,7 +610,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/chivas.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Chivas Regal</a><span>Q. 675.00</span>
             </div>
@@ -620,7 +620,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-whisky">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/Buchanans.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Buchanans</a><span>Q. 675.00</span>
             </div>
@@ -630,7 +630,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/ronxl.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">XL Botella</a><span>Q. 200.00</span>
             </div>
@@ -640,7 +640,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/ronxl.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">XL ½  Botella</a><span>Q. 110.00</span>
             </div>
@@ -650,7 +650,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/ron12.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">12 Años Botella</a><span>Q. 250.00</span>
             </div>
@@ -660,7 +660,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/ron12.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">12 Años ½  Botella</a><span>Q. 140.00</span>
             </div>
@@ -670,7 +670,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/ron18.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">18 Años Botella</a><span>Q. 350.00</span>
             </div>
@@ -680,7 +680,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-ron">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/botellazacapa.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Zacapa  Botella</a><span>Q. 6750.00</span>
             </div>
@@ -690,7 +690,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-vodka">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/vodkafinlandia.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Finlandia  Botella</a><span>Q. 300.00</span>
             </div>
@@ -700,7 +700,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-vodka">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/vodkaabsolut.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Absolut  Botella</a><span>Q. 300.00</span>
             </div>
@@ -710,7 +710,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-vodka">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/vodkaabsolut.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Absolut ½ Botella</a><span>Q. 175.00</span>
             </div>
@@ -720,7 +720,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cigarros">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/cigarros.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cajetilla</a><span>Q. 40.00</span>
             </div>
